syntax = "proto3";

package vela.api.model;
option go_package = "github.com/oam-dev/velacp/pkg/proto/model";

message Capability {

  string name = 1;

  string desc = 2;

  // Unix time of the last time when the capability is updated.
  int64 updated_at = 3;

  // Catalog name.
  string catalog_name = 4;

  // Type of the Capability, such as "componentDefinition" or "trait"
  string type = 5;

  // JSON schema of the Capability.
  string json_schema = 6;

}

message CapabilityListResponse {
  repeated Capability capabilities = 1;
}

message CapabilityResponse {
  Capability capability = 1;
}