syntax = "proto3";

package vela.api.model;
option go_package = "github.com/oam-dev/velacp/pkg/proto/model";

message Catalog {

  string name = 1;

  string desc = 2;

  // Unix time of the last time when the catalog is updated.
  int64 updated_at = 3;

  // Type of the Catalog, such as "github" for a github repo.
  string type = 4;

  // URL of the Catalog.
  string url = 5;

  // Auth token used to sync Catalog.
  string token = 6;
}

message CatalogListResponse {
  repeated Catalog catalogs = 1;
}

message CatalogResponse {
  Catalog catalog = 1;
}